--- a/Automation/Automation.App/Views/PackagesPages/_Components/PackageInfos.xaml
+++ b/Automation/Automation.App/Views/PackagesPages/_Components/PackageInfos.xaml
@@ -8,5 +8,13 @@
     mc:Ignorable="d"
     d:DesignHeight="450"
     d:DesignWidth="800">
-    <Grid DataContext="{Binding Package, RelativeSource={RelativeSource local:PackageInfos}}" />
+    <Grid>
+
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition Height="auto" />
+        </Grid.RowDefinitions>
+
+        <local:PackageSummary Package="{Binding}" />
+    </Grid>
 </UserControl>
