--- a/Automation/Automation.App/Views/PackagesPages/_Components/PackageSelector.xaml
+++ b/Automation/Automation.App/Views/PackagesPages/_Components/PackageSelector.xaml
@@ -5,13 +5,50 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Automation.App.Views.PackagesPages.Components"
+    xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
+    xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+    xmlns:jouffluData="clr-namespace:Joufflu.Data.Components;assembly=Joufflu.Data"
     mc:Ignorable="d"
-    d:DesignHeight="450"
-    d:DesignWidth="800">
-    <Grid>
+    MinWidth="400"
+    MinHeight="400">
+    <Grid Margin="2" DataContext="{Binding RelativeSource={RelativeSource AncestorType=local:PackageSelector}}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto" />
             <RowDefinition />
+            <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
+
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="auto" />
+            </Grid.ColumnDefinitions>
+            <TextBox Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged, Delay=300}" />
+            <fonts:Icon
+                Margin="8,0"
+                HorizontalAlignment="Right"
+                Text="{x:Static fonts:IconFont.MagnifyingGlass}"
+                Foreground="{DynamicResource {x:Static adonisUi:Brushes.Layer1BorderBrush}}" />
+        </Grid>
+
+        <ListBox
+            ItemsSource="{Binding Packages.Data}"
+            Grid.Row="1"
+            SelectedItem="{Binding SelectedPackage, Mode=TwoWay}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <local:PackageSummary Package="{Binding}" />
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+
+        <jouffluData:Paging
+            x:Name="InstancesPaging"
+            PagingChange="InstancesPaging_PagingChange"
+            Margin="0,2,0,0"
+            Grid.Row="2"
+            PageNumber="{Binding Packages.Page}"
+            Capacity="{Binding Packages.PageSize}"
+            Total="{Binding Packages.Total}" />
     </Grid>
 </UserControl>
