--- a/Automation/Automation.App/Views/TasksPages/TaskUI/TaskEdit.xaml
+++ b/Automation/Automation.App/Views/TasksPages/TaskUI/TaskEdit.xaml
@@ -6,7 +6,9 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Automation.App.Views.TasksPages.TaskUI"
     xmlns:components="clr-namespace:Automation.App.Views.TasksPages.Components"
+    xmlns:packageComponents="clr-namespace:Automation.App.Views.PackagesPages.Components"
     xmlns:inputs="clr-namespace:Automation.App.Components.Inputs"
+    xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
     mc:Ignorable="d">
     <Grid Margin="4">
@@ -16,10 +18,84 @@
         </Grid.RowDefinitions>
 
         <StackPanel Orientation="Vertical" DataContext="{Binding Task, RelativeSource={RelativeSource AncestorType=local:TaskEdit}}">
-            <TextBlock Margin="0,0,0,4">Name</TextBlock>
+            <TextBlock Margin="0,8,0,4" FontWeight="Bold">Name</TextBlock>
             <TextBox Text="{Binding Name}" />
-            <TextBlock Margin="0,0,0,4">Package</TextBlock>
-            <inputs:FilePicker />
+            <TextBlock Margin="0,8,0,4" FontWeight="Bold">Package</TextBlock>
+            <Grid>
+                <StackPanel>
+                    <StackPanel.Style>
+                        <Style TargetType="StackPanel">
+                            <Setter Property="Visibility" Value="Collapsed" />
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding Package}" Value="{x:Null}">
+                                    <Setter Property="Visibility" Value="Visible" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </StackPanel.Style>
+
+                    <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
+                        <Button Click="SelectPackage_Click">
+                            <StackPanel Orientation="Horizontal">
+                                <fonts:Icon Text="{x:Static fonts:IconFont.MagnifyingGlass}" />
+                                <TextBlock Margin="4,0,0,0">
+                                    Select existing
+                                </TextBlock>
+                            </StackPanel>
+                        </Button>
+                        <TextBlock VerticalAlignment="Center" Margin="10,0">Or</TextBlock>
+                        <Button>
+                            <StackPanel Orientation="Horizontal">
+                                <fonts:Icon Text="{x:Static fonts:IconFont.Plus}" />
+                                <TextBlock Margin="4,0,0,0">
+                                    Create new
+                                </TextBlock>
+                            </StackPanel>
+                        </Button>
+                    </StackPanel>
+
+                    <TextBlock
+                        FontStyle="Italic"
+                        FontSize="10"
+                        TextAlignment="Center"
+                        Foreground="{DynamicResource {x:Static adonisUi:Brushes.Layer1BorderBrush}}">
+                        To update an existing package select it first then update it.
+                    </TextBlock>
+                </StackPanel>
+
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="auto" />
+                    </Grid.ColumnDefinitions>
+
+                    <Grid.Style>
+                        <Style TargetType="Grid">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding Package}" Value="{x:Null}">
+                                    <Setter Property="Visibility" Value="Collapsed" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Grid.Style>
+                    <packageComponents:PackageSummary Package="{Binding Package}" />
+
+                    <StackPanel Grid.Column="1" Margin="2,0,0,0">
+                        <Button IsEnabled="False">
+                            <StackPanel Orientation="Horizontal">
+                                <fonts:Icon Text="{x:Static fonts:IconFont.Upload}" />
+                                <TextBlock Margin="4,0,0,0">Update</TextBlock>
+                            </StackPanel>
+                        </Button>
+                        <Button Margin="0,2,0,0" Click="RemovePackage_Click">
+                            <StackPanel Orientation="Horizontal">
+                                <fonts:Icon Text="{x:Static fonts:IconFont.LinkSlash}" />
+                                <TextBlock Margin="4,0,0,0">Remove</TextBlock>
+                            </StackPanel>
+                        </Button>
+                    </StackPanel>
+                </Grid>
+            </Grid>
         </StackPanel>
 
         <Button
