--- a/Automation/Automation.App/Views/TasksPages/_Components/ScopedSelector.xaml
+++ b/Automation/Automation.App/Views/TasksPages/_Components/ScopedSelector.xaml
@@ -10,6 +10,46 @@
     xmlns:components="clr-namespace:Automation.App.Views.TasksPages.Components"
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
     mc:Ignorable="d">
+    <UserControl.Resources>
+        <ContextMenu x:Key="AddContextMenu" DataContext="{Binding PlacementTarget.Tag, RelativeSource={RelativeSource Self}}">
+            <MenuItem Header="Add">
+                <MenuItem.Style>
+                    <Style TargetType="MenuItem">
+                        <Setter Property="Visibility" Value="Collapsed" />
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding SelectedOrDefault.Type}" Value="Scope">
+                                <Setter Property="Visibility" Value="Visible" />
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </MenuItem.Style>
+                <MenuItem.Icon>
+                    <fonts:Icon Text="{x:Static fonts:IconFont.Plus}" />
+                </MenuItem.Icon>
+
+                <MenuItem Header="Add scope" Command="{Binding AddScopeCommand}">
+                    <MenuItem.Icon>
+                        <components:NodeIcon Type="Scope" Margin="0,0,4,0" />
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Header="Add workflow" Command="{Binding AddWorkflowCommand}">
+                    <MenuItem.Icon>
+                        <components:NodeIcon Type="Workflow" Margin="0,0,4,0" />
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Header="Add task" Command="{Binding AddTaskCommand}">
+                    <MenuItem.Icon>
+                        <components:NodeIcon Type="Task" Margin="0,0,4,0" />
+                    </MenuItem.Icon>
+                </MenuItem>
+            </MenuItem>
+            <MenuItem Header="Remove" Command="{Binding RemoveSelectedCommand}">
+                <MenuItem.Icon>
+                    <fonts:Icon Text="{x:Static fonts:IconFont.Trash}" Foreground="{DynamicResource {x:Static adonisUi:Brushes.ErrorBrush}}" />
+                </MenuItem.Icon>
+            </MenuItem>
+        </ContextMenu>
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
@@ -22,11 +62,19 @@
                 <ColumnDefinition Width="auto" />
             </Grid.ColumnDefinitions>
             <TextBox />
+            <fonts:Icon
+                Margin="8,0"
+                HorizontalAlignment="Right"
+                Text="{x:Static fonts:IconFont.MagnifyingGlass}"
+                Foreground="{DynamicResource {x:Static adonisUi:Brushes.Layer1BorderBrush}}" />
             <Button
+                Margin="2,0,0,0"
+                Click="Add_Click"
                 Grid.Column="1"
-                Style="{StaticResource IconButton}"
-                ToolTip="Zoom out">
-                <fonts:Icon Text="{x:Static fonts:IconFont.MagnifyingGlass}" />
+                ToolTip="Add new"
+                ContextMenu="{StaticResource AddContextMenu}"
+                Tag="{Binding RelativeSource={RelativeSource AncestorType=local:ScopedSelector}}">
+                <fonts:Icon Text="{x:Static fonts:IconFont.Plus}" />
             </Button>
         </Grid>
 
@@ -38,47 +86,8 @@
             ItemsSource="{Binding RootScope.SortedChildrens}"
             PreviewMouseRightButtonDown="TreeView_PreviewMouseRightButtonDown"
             SelectedItemChanged="TreeView_SelectedItemChanged"
-            Tag="{Binding RelativeSource={RelativeSource AncestorType=local:ScopedSelector}}">
-            <TreeView.ContextMenu>
-                <ContextMenu DataContext="{Binding PlacementTarget.Tag, RelativeSource={RelativeSource Self}}">
-                    <MenuItem Header="Add">
-                        <MenuItem.Style>
-                            <Style TargetType="MenuItem">
-                                <Setter Property="Visibility" Value="Collapsed" />
-                                <Style.Triggers>
-                                    <DataTrigger Binding="{Binding SelectedOrDefault.Type}" Value="Scope">
-                                        <Setter Property="Visibility" Value="Visible" />
-                                    </DataTrigger>
-                                </Style.Triggers>
-                            </Style>
-                        </MenuItem.Style>
-                        <MenuItem.Icon>
-                            <fonts:Icon Text="{x:Static fonts:IconFont.Plus}" />
-                        </MenuItem.Icon>
-
-                        <MenuItem Header="Add scope" Command="{Binding AddScopeCommand}">
-                            <MenuItem.Icon>
-                                <components:NodeIcon Type="Scope" Margin="0,0,4,0" />
-                            </MenuItem.Icon>
-                        </MenuItem>
-                        <MenuItem Header="Add workflow" Command="{Binding AddWorkflowCommand}">
-                            <MenuItem.Icon>
-                                <components:NodeIcon Type="Workflow" Margin="0,0,4,0" />
-                            </MenuItem.Icon>
-                        </MenuItem>
-                        <MenuItem Header="Add task" Command="{Binding AddTaskCommand}">
-                            <MenuItem.Icon>
-                                <components:NodeIcon Type="Task" Margin="0,0,4,0" />
-                            </MenuItem.Icon>
-                        </MenuItem>
-                    </MenuItem>
-                    <MenuItem Header="Remove" Command="{Binding RemoveSelectedCommand}">
-                        <MenuItem.Icon>
-                            <fonts:Icon Text="{x:Static fonts:IconFont.Trash}" Foreground="{DynamicResource {x:Static adonisUi:Brushes.ErrorBrush}}" />
-                        </MenuItem.Icon>
-                    </MenuItem>
-                </ContextMenu>
-            </TreeView.ContextMenu>
+            Tag="{Binding RelativeSource={RelativeSource AncestorType=local:ScopedSelector}}"
+            ContextMenu="{StaticResource AddContextMenu}">
             <TreeView.ItemContainerStyle>
                 <Style TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource TreeViewItemStyle}">
                     <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
