--- a/Automation/Automation.App/App.xaml
+++ b/Automation/Automation.App/App.xaml
@@ -14,6 +14,7 @@
                 <ResourceDictionary Source="pack://application:,,,/Automation.App;component/Resources/Resources.xaml" />
 
                 <ResourceDictionary Source="pack://application:,,,/Joufflu.Shared;component/Styles/Resources.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Joufflu.Popups;component/Resources.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
             <converters:EnumToListConverter x:Key="EnumToListConverter" />
