--- a/Automation/Automation.App/Views/TasksPages/TaskUI/TaskSchedules.xaml
+++ b/Automation/Automation.App/Views/TasksPages/TaskUI/TaskSchedules.xaml
@@ -10,19 +10,19 @@
     d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition />
             <RowDefinition Height="100" />
             <RowDefinition />
-            <RowDefinition />
         </Grid.RowDefinitions>
-        <GroupBox Header="Timeline">
-            <TextBlock>Graph to display the execution of the task with oxyplot</TextBlock>
+        <GroupBox Header="Schedules">
+            <TextBlock>All scheduled execution</TextBlock>
         </GroupBox>
 
         <GroupBox
-            Header="Schedules"
             Grid.Row="1"
+            Header="Timeline"
             Margin="0,4,0,0">
-            <TextBlock>All scheduled execution</TextBlock>
+            <TextBlock>Graph to display the execution of the task with oxyplot</TextBlock>
         </GroupBox>
 
         <GroupBox
