--- a/Automation/Automation.App/App.xaml
+++ b/Automation/Automation.App/App.xaml
@@ -15,6 +15,7 @@
 
                 <ResourceDictionary Source="pack://application:,,,/Joufflu.Shared;component/Styles/Resources.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/Joufflu.Popups;component/Resources.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Joufflu.Inputs;component/Resources.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
             <converters:EnumToListConverter x:Key="EnumToListConverter" />
