--- a/Automation/Automation.App/Views/PackagesPages/_Components/PackageEdit.xaml
+++ b/Automation/Automation.App/Views/PackagesPages/_Components/PackageEdit.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Automation.App.Views.PackagesPages.Components.PackageInfos"
+    x:Class="Automation.App.Views.PackagesPages.Components.PackageEdit"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -8,13 +8,12 @@
     mc:Ignorable="d"
     d:DesignHeight="450"
     d:DesignWidth="800">
-    <Grid>
-
+    <Grid DataContext="{Binding Package, RelativeSource={RelativeSource AncestorType=local:PackageEdit}}">
         <Grid.RowDefinitions>
-            <RowDefinition />
             <RowDefinition Height="auto" />
+            <RowDefinition />
         </Grid.RowDefinitions>
-
         <local:PackageSummary Package="{Binding}" />
+        <ListView ItemsSource="{Binding Versions}" />
     </Grid>
 </UserControl>
