--- a/Automation/Automation.App/Views/PackagesPages/_Components/PackageSummary.xaml
+++ b/Automation/Automation.App/Views/PackagesPages/_Components/PackageSummary.xaml
@@ -10,22 +10,13 @@
     d:DesignWidth="800">
     <GroupBox>
         <Grid DataContext="{Binding Package, RelativeSource={RelativeSource AncestorType=local:PackageSummary}}">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition Width="auto" />
-            </Grid.ColumnDefinitions>
-
             <Grid.RowDefinitions>
                 <RowDefinition />
                 <RowDefinition />
             </Grid.RowDefinitions>
 
             <TextBlock FontWeight="Bold" Text="{Binding Name}" />
-            <TextBlock Grid.Column="1" Text="{Binding Version}" />
-            <TextBlock
-                Grid.Row="1"
-                Grid.ColumnSpan="2"
-                Text="{Binding Description}" />
+            <TextBlock Grid.Row="1" Text="{Binding Description}" />
         </Grid>
     </GroupBox>
 </UserControl>
