--- a/Automation/Automation.App/Views/PackagesPages/_Components/PackageEdit.xaml
+++ b/Automation/Automation.App/Views/PackagesPages/_Components/PackageEdit.xaml
@@ -6,8 +6,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Automation.App.Views.PackagesPages.Components"
     mc:Ignorable="d"
-    d:DesignHeight="450"
-    d:DesignWidth="800">
+    Margin="2"
+    MinHeight="200">
     <Grid DataContext="{Binding Package, RelativeSource={RelativeSource AncestorType=local:PackageEdit}}">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
