--- a/Automation/Automation.App/Views/PackagesPages/_Components/PackageEdit.xaml
+++ b/Automation/Automation.App/Views/PackagesPages/_Components/PackageEdit.xaml
@@ -28,10 +28,24 @@
             <Button
                 Click="ButtonAdd_Click"
                 Grid.Column="1"
+                Height="24"
                 ToolTip="Add new version">
                 <fonts:Icon Text="{x:Static fonts:IconFont.Plus}" />
             </Button>
         </Grid>
-        <ListBox ItemsSource="{Binding Versions}" Grid.Row="2" />
+        <ListBox
+            x:Name="ListBoxVersion"
+            ItemsSource="{Binding Versions}"
+            Grid.Row="2">
+            <ListBox.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="Remove" Click="MenuItemRemove_Click">
+                        <MenuItem.Icon>
+                            <fonts:Icon Text="{x:Static fonts:IconFont.Trash}" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                </ContextMenu>
+            </ListBox.ContextMenu>
+        </ListBox>
     </Grid>
 </UserControl>
